delete and put request successful
